02-envoy-gateway-api/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    demo: gateway-api
